fix: Add scrolling on mobile devices

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -80,6 +80,7 @@
         width: 100vw;
         margin: 0 0 0 0;
         background: #1d2327;
+        border-bottom: none;
 
 
         #ham-menu {
